fixed scrollbar

--- a/src/assets/styles/general.styl
+++ b/src/assets/styles/general.styl
@@ -61,3 +61,11 @@ body
 			right 0
 			bottom 0
 			left 0
+
+.iScrollVerticalScrollbar
+	.iScrollIndicator
+		min-height 200px
+		@media tablet
+			min-height 100px
+		@media phone
+			min-height 50px
